@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2018 the original author or authors.
+ *    Copyright 2009-2019 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,14 +15,14 @@
  */
 package org.apache.ibatis.type;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class DoubleTypeHandlerTest extends BaseTypeHandlerTest {
+class DoubleTypeHandlerTest extends BaseTypeHandlerTest {
 
   private static final TypeHandler<Double> TYPE_HANDLER = new DoubleTypeHandler();
 
@@ -37,10 +37,10 @@ public class DoubleTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
     when(rs.getDouble("column")).thenReturn(100d);
-    assertEquals(new Double(100d), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Double.valueOf(100d), TYPE_HANDLER.getResult(rs, "column"));
 
     when(rs.getDouble("column")).thenReturn(0d);
-    assertEquals(new Double(0d), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Double.valueOf(0d), TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
@@ -55,10 +55,10 @@ public class DoubleTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
     when(rs.getDouble(1)).thenReturn(100d);
-    assertEquals(new Double(100d), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Double.valueOf(100d), TYPE_HANDLER.getResult(rs, 1));
 
     when(rs.getDouble(1)).thenReturn(0d);
-    assertEquals(new Double(0d), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Double.valueOf(0d), TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
@@ -73,10 +73,10 @@ public class DoubleTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
     when(cs.getDouble(1)).thenReturn(100d);
-    assertEquals(new Double(100d), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Double.valueOf(100d), TYPE_HANDLER.getResult(cs, 1));
 
     when(cs.getDouble(1)).thenReturn(0d);
-    assertEquals(new Double(0d), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Double.valueOf(0d), TYPE_HANDLER.getResult(cs, 1));
   }
 
   @Override
