@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2018 the original author or authors.
+ *    Copyright 2009-2019 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,14 +15,14 @@
  */
 package org.apache.ibatis.type;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class LongTypeHandlerTest extends BaseTypeHandlerTest {
+class LongTypeHandlerTest extends BaseTypeHandlerTest {
 
   private static final TypeHandler<Long> TYPE_HANDLER = new LongTypeHandler();
 
@@ -37,10 +37,10 @@ public class LongTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
     when(rs.getLong("column")).thenReturn(100L);
-    assertEquals(new Long(100L), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Long.valueOf(100L), TYPE_HANDLER.getResult(rs, "column"));
 
     when(rs.getLong("column")).thenReturn(0L);
-    assertEquals(new Long(0L), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Long.valueOf(0L), TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
@@ -55,10 +55,10 @@ public class LongTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
     when(rs.getLong(1)).thenReturn(100L);
-    assertEquals(new Long(100L), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Long.valueOf(100L), TYPE_HANDLER.getResult(rs, 1));
 
     when(rs.getLong(1)).thenReturn(0L);
-    assertEquals(new Long(0L), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Long.valueOf(0L), TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
@@ -73,10 +73,10 @@ public class LongTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
     when(cs.getLong(1)).thenReturn(100L);
-    assertEquals(new Long(100L), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Long.valueOf(100L), TYPE_HANDLER.getResult(cs, 1));
 
     when(cs.getLong(1)).thenReturn(0L);
-    assertEquals(new Long(0L), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Long.valueOf(0L), TYPE_HANDLER.getResult(cs, 1));
   }
 
   @Override
